--- a/animations.html
+++ b/animations.html
@@ -35,23 +35,33 @@
         <div class="social-link-holder"><a target="_blank" href="https://www.facebook.com/shadedfeather/">Facebook</a></div>
     </div>
 </div>
-<div class=" complete-animations">
-  <div class="photos-side-headings" style="text-align: center; margin: 0; padding: 0;">animations and cg films</div>
-  <div class="animations-grid-div">
-    <video src="./Assets/videos/whirlpool.mp4" type="video/mp4" 
-    muted class="vid" loop>
+<div class="complete-animations">
+    <div class="gray-color" style="background-color: #232931;">
+        <div class="photos-side-headings" style="text-align: center; margin: 0; padding: 1rem 0;">animations and cg films</div>
+    </div>
+    <div class="animations-grid-div">
+      <div class="gray-color" style="background-color: #232931;">
+        <video src="./Assets/videos/whirlpool.mp4" type="video/mp4" 
+        muted class="vid" loop>
+        </video>
+    </div>
+    <div class="gray-color" style="background-color: #232931;">
+        <video src="./Assets/videos/coats.mp4" type="video/mp4" 
+        muted class="vid" loop>
     </video>
-    <video src="./Assets/videos/coats.mp4" type="video/mp4" 
-    muted class="vid" loop>
+    </div>
+    <div class="gray-color" style="background-color: #232931;">
+        <video src="./Assets/videos/coats2.mp4" type="video/mp4" 
+        muted class="vid" loop>
     </video>
-    <video src="./Assets/videos/coats2.mp4" type="video/mp4" 
-    muted class="vid" loop>
+    </div>
+    <div class="gray-color" style="background-color: #232931;">
+        <video src="./Assets/videos/canon.mp4" type="video/mp4" 
+        muted class="vid" loop>
     </video>
-    <video src="./Assets/videos/canon.mp4" type="video/mp4" 
-    muted class="vid" loop>
-    </video>
+    </div>
   </div>
-  <div class="photos-side-headings" style="text-align: center; margin: 0; padding: 0;">animations and cg photography</div>
+  <div class="photos-side-headings" style="text-align: center; margin: 0; padding: 1rem 0;">animations and cg photography</div>
   <div class="animations-div-2">
     <div class="">
         <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.12.47 PM.png" alt="">
