--- a/films.html
+++ b/films.html
@@ -36,6 +36,7 @@
     </div>
 </div>
 <div class="complete-films">
+  <div class="gray-color" style="background-color: #232931;">
   <div class="photos-side-headings">consumer electronics</div>
   <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/708812445?h=3d330afbf2" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
@@ -47,6 +48,8 @@
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/345890223?h=e80f562467" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe style="place-self: center start" title="vimeo-player" src="https://player.vimeo.com/video/784985820?h=2f81c43a46" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
   </div>
+</div>
+<div class="white-color" style="background-color: white;">
   <div class="photos-side-headings">automobiles</div>
   <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/617052578?h=c2cebcac4c" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
@@ -59,6 +62,9 @@
     <iframe style="place-self: center start" title="vimeo-player" src="https://player.vimeo.com/video/437827791?h=95bf4cb747" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/463942991?h=0ef893fc44" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe> -->
   </div>
+</div>
+<div class="gray-color" style="background-color: #232931;">
+
   <div class="photos-side-headings">healthcare and wellness</div>
   <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/345890415?h=eebef02971" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
@@ -66,6 +72,8 @@
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/416846073?h=80caffb343" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe style="place-self: center start" title="vimeo-player" src="https://player.vimeo.com/video/280908889?h=338af54e18" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
   </div>
+  </div>
+  <div class="gray-color" style="background-color: white;">
   <div class="photos-side-headings">fashion beauty and lifestyle</div>
   <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/653699657?h=7b4a216069" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
@@ -73,15 +81,8 @@
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/339949902?h=9874f93320" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe style="place-self: center start" title="vimeo-player" src="https://player.vimeo.com/video/320906342?h=f4c6ac61ff" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
   </div>
-  <div class="photos-side-headings">alcohol</div>
-  <div class="videos-grid-div">
-    <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/731026854?h=a81e20d6f6" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe> -->
-    <iframe title="vimeo-player" src="https://player.vimeo.com/video/617105779?h=90abc715db" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/617104600?h=bdf5717856" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe> -->
-    <iframe style="place-self: center start" title="vimeo-player" src="https://player.vimeo.com/video/617105616?h=2ad44e8562" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-    <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/617086440?h=9f9cc2d518" loading="lazy" class="iframe-4-3" frameborder="0" allowfullscreen></iframe> -->
-    <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/617087246?h=91740c754c" loading="lazy" class="iframe-4-3" frameborder="0" allowfullscreen></iframe> -->
-  </div>
+</div>
+<div class="gray-color" style="background-color: #232931;">
   <div class="photos-side-headings">social media</div>
   <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/632010719?h=1fb9b549a4" loading="lazy" class="iframe-vertical" frameborder="0" allowfullscreen></iframe>
@@ -91,6 +92,18 @@
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/632865139?h=3079fc9198" loading="lazy" class="iframe-vertical" frameborder="0" allowfullscreen></iframe>
     <iframe style="place-self: center start" title="vimeo-player" src="https://player.vimeo.com/video/631995152?h=a2a6c77630" loading="lazy" class="iframe-vertical" frameborder="0" allowfullscreen></iframe>
   </div>
+</div>
+  <div class="gray-color" style="background-color: white;">
+  <div class="photos-side-headings">alcohol</div>
+  <div class="videos-grid-div">
+    <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/731026854?h=a81e20d6f6" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe> -->
+    <iframe title="vimeo-player" src="https://player.vimeo.com/video/617105779?h=90abc715db" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
+    <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/617104600?h=bdf5717856" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe> -->
+    <iframe style="place-self: center start" title="vimeo-player" src="https://player.vimeo.com/video/617105616?h=2ad44e8562" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
+    <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/617086440?h=9f9cc2d518" loading="lazy" class="iframe-4-3" frameborder="0" allowfullscreen></iframe> -->
+    <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/617087246?h=91740c754c" loading="lazy" class="iframe-4-3" frameborder="0" allowfullscreen></iframe> -->
+  </div>
+</div>
 
   <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/373565717?h=b46b309147" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe> -->
   <!-- <div class="photos-side-headings">asees plus</div>
