--- a/microcontent.html
+++ b/microcontent.html
@@ -35,14 +35,17 @@
         <div class="social-link-holder"><a target="_blank" href="https://www.facebook.com/shadedfeather/">Facebook</a></div>
     </div>
 </div>
-<div class="complete-project">
-    <div class="photos-side-headings">landscape</div>
-    <div class="photos-grid-div">
-        <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
-        <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
-        <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
-        <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
+<div class="">
+    <div class="graycolor" style="background-color: #232931;">
+        <div class="photos-side-headings">landscape</div>
+        <div class="photos-grid-div">
+            <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
+            <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
+            <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
+            <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
+        </div>
     </div>
+    <div class="graycolor" style="background-color: white;">
     <div class="photos-side-headings">vertical</div>
     <div class="photos-grid-div">
         <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
@@ -50,10 +53,13 @@
         <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
         <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
     </div>
+    </div>
+    <div class="graycolor" style="background-color: #232931;">
     <div class="photos-side-headings">square</div>
     <div class="photos-grid-div">
         <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
         <div class=""><img loading='lazy' class="microcontent-img" src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
+    </div>
     </div>
 </div>
 <div class="container-fluid other-content">
