--- a/photography.html
+++ b/photography.html
@@ -46,7 +46,7 @@
                         <div class="bottom-text">
                             <div class="link">oppo</div>
                         </div>
-                        <a href="#" class="project-link-full"></a>
+                        <a href="./oppo.html" class="project-link-full"></a>
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                         <div class="bottom-text">
                             <div class="link">blenders pride</div>
                         </div>
-                        <a href="#" class="project-link-full"></a>
+                        <a href="./blenders.html" class="project-link-full"></a>
                     </div>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                         <div class="bottom-text">
                             <div class="link">royal stag</div>
                         </div>
-                        <a href="#" class="project-link-full"></a>
+                        <a href="./blenders.html" class="project-link-full"></a>
                     </div>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                         <div class="bottom-text">
                             <div class="link">oppo</div>
                         </div>
-                        <a href="#" class="project-link-full"></a>
+                        <a href="./oppo.html" class="project-link-full"></a>
                     </div>
                 </div>
             </div>
