--- a/work.html
+++ b/work.html
@@ -77,7 +77,7 @@
         <div class="">
             <div class="boxy img-box">
                 <div class="img video-div">
-                    <video className="video-content" style="width: 100%; height: auto;" autoPlay muted controls loop>
+                    <video className="video-content" style="width: 100%; height: auto;" autoPlay muted loop>
                       <source src='./Assets/videos/products-video.mp4' type='video/mp4' />
                     </video>
                 </div>
@@ -94,7 +94,7 @@
         <div class="">
             <div class="boxy img-box">
                 <div class="img video-div">
-                    <video className="video-content" style="width: 100%; height: auto;" autoPlay muted controls loop>
+                    <video className="video-content" style="width: 100%; height: auto;" autoPlay muted loop>
                       <source src='./Assets/videos/Banner.mp4' type='video/mp4' />
                     </video>
                 </div>
@@ -147,7 +147,7 @@
         <div class="col">
             <div class="contact-info-holder">
                 <div class="title hover">Call us</div>
-                <div style="display: flex; gap: 20px;">
+                <div class="footer-call-div">
                     <div class="contact-info">9999251711, </div>
                     <div class="contact-info"">9999091710 </div>
                 </div>
