--- a/blenders.html
+++ b/blenders.html
@@ -5,20 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="./css/Utils.css"> -->
   </head>
+  <style>
+    body{
+      background-color: #232931;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+    .carousel-img{
+      height: 550px;
+      width: auto;
+    }
+  </style>
   <body>
-    <h1>Hello, world!</h1>
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="2000">
-          <img class="img-photography" src="./Assets/wetransfer_images_2023-01-16_1340/Images/img1.png" class="d-block w-100" alt="...">
+          <img class="carousel-img" src="./Assets/wetransfer_images_2023-01-16_1340/100-pipers-1.webp" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img class="img-photography" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.13.25 PM.png" class="d-block w-100" alt="...">
+          <img class="carousel-img" src="./Assets/wetransfer_images_2023-01-16_1340/bp.jpg" class="d-block w-100" alt="...">
         </div>
-        <div class="carousel-item">
-          <img class="img-photography" src="./Assets/wetransfer_images_2023-01-16_1340/Images/img17.png" class="d-block w-100" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
