--- a/oppo.html
+++ b/oppo.html
@@ -1,109 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photography Oppo</title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/fontawesome-all.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-<body>
-    <style>
-      .img-photography{
-        width: 100%;
-        height: auto;
-      }
-    </style>
-<div class="menu-toggle">
-    <div class="icon"></div>
-</div>
-<div class="main-menu">
-    <div class="contant-info">
-        <div><a href="mailto:rubal@shadedfeather.com">rubal@shadedfeather.com</a></div>
-        <div><a href="#">+91 9999251711</a></div>
-    </div>
-    <div class="menu-links">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="work.html">Work</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </div>
-    <div class="social-media">
-        <div class="social-link-holder"><a target="_blank" href="https://vimeo.com/shadedfeather">Vimeo</a></div>
-        <div class="social-link-holder"><a target="_blank" href="https://www.instagram.com/theshadedfeather/">Instagram</a></div>
-        <div class="social-link-holder"><a target="_blank" href="https://www.linkedin.com/company/shaded-feather-productions/mycompany/">LinkedIn</a></div>
-        <div class="social-link-holder"><a target="_blank" href="https://www.facebook.com/shadedfeather/">Facebook</a></div>
-    </div>
-</div>
-<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="2000">
-        <img class="img-photography" src="./Assets/wetransfer_images_2023-01-16_1340/Images/img1.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item" data-bs-interval="2000">
-        <img class="img-photography" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.13.25 PM.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img class="img-photography" src="./Assets/wetransfer_images_2023-01-16_1340/Images/img17.png" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-</div>
-<div class="container-fluid other-content">
-    <div class="row">
-        <div class="col">
-            <div class="lg-text">have a project<br>for us?</div>
-            <div class="normal-text">
-                <p class="description">Get in touch with us and we will get the wheels rolling</p>
-            </div>
-            <div class="btn-holder">
-                <a href="contact.html" class="cr-btn primary">let's shade</a>
-            </div>
+  </head>
+  <style>
+    body{
+      background-color: #232931;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+    .carousel-img{
+      height: 550px;
+      width: auto;
+    }
+  </style>
+  <body>
+    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="2000">
+          <img class="carousel-img" src="./Assets/wetransfer_images_2023-01-16_1340/oppo.webp" class="d-block w-100" alt="...">
         </div>
-    </div>
-</div>
-<footer class="container-fluid footer">
-    <div class="row">
-        <div class="col">
-            <div class="contact-info-holder">
-                <div class="title hover">Call us</div>
-                <div style="display: flex; gap: 20px;">
-                    <div class="contact-info">9999251711, </div>
-                    <div class="contact-info"">9999091710 </div>
-                </div>
-            </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img class="carousel-img" src="./Assets/wetransfer_images_2023-01-16_1340/oppo_find_n_review.webp" class="d-block w-100" alt="...">
         </div>
-        <div class="col">
-            <div class="contact-info-holder">
-                <div class="title hover">E-mail</div>
-                <div class="contact-info"><a href="mailto:reachus@shadedfeather.com">reachus@shadedfeather.com</a></div>
-                <div class="social-media">
-                    <div class="social-link-holder"><a target="_blank" href="https://vimeo.com/shadedfeather">Vimeo</a></div>
-                    <div class="social-link-holder"><a target="_blank" href="https://www.instagram.com/theshadedfeather/">Instagram</a></div>
-                    <div class="social-link-holder"><a target="_blank" href="https://www.linkedin.com/company/shaded-feather-productions/mycompany/">LinkedIn</a></div>
-                    <div class="social-link-holder"><a target="_blank" href="https://www.facebook.com/shadedfeather/">Facebook</a></div>
-                </div>
-            </div>
         </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-</footer>
-<script src="js/jquery.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/anime.min.js"></script>
-<script src="js/scrollreveal.min.js"></script>
-<script src="js/main.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+  </body>
 </html>
