--- a/blenders.html
+++ b/blenders.html
@@ -3,21 +3,47 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Blenders Pride Photography</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/Utils.css">
   </head>
   <style>
     body{
       background-color: #232931;
-      padding: 2rem 1rem;
       text-align: center;
     }
     .carousel-img{
       height: 550px;
       width: auto;
+      padding-bottom: 5rem;
+    }
+
+    .photos-side-headings{
+      margin: 0;
+      padding: 0 0 1rem 0;
+    }
+
+    @media screen and (max-width:992px) {
+      body{
+        background-color: #232931;
+        padding: 2rem 0;
+        text-align: center;
+      }
+      .carousel-img, .carousel{
+        height: auto;
+        width: 100%;
+        margin-bottom: 0.5rem;
+      }
+
+      .photos-side-headings{
+        margin: 0;
+        padding: 0 0 1rem 0;
+      }
     }
   </style>
   <body>
+    <div class="photos-side-headings">blenders pride</div>
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="2000">
@@ -27,7 +53,6 @@
           <img class="carousel-img" src="./Assets/wetransfer_images_2023-01-16_1340/bp.jpg" class="d-block w-100" alt="...">
         </div>
         </div>
-      </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
@@ -37,6 +62,51 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <div class="container-fluid other-content">
+      <div class="row">
+          <div class="col">
+              <div class="lg-text">have a project<br>for us?</div>
+              <div class="normal-text">
+                  <p class="description">Get in touch with us and we will get the wheels rolling</p>
+              </div>
+              <div class="btn-holder">
+                  <a href="contact.html" class="cr-btn primary">let's shade</a>
+              </div>
+          </div>
+      </div>
+  </div>
+  <footer class="container-fluid footer">
+      <div class="row">
+          <div class="col">
+              <div class="contact-info-holder">
+                  <div class="title hover">Call us</div>
+                  <div class="footer-call-div">
+                      <div class="contact-info">9999251711, </div>
+                      <div class="contact-info"">9999091710 </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col">
+              <div class="contact-info-holder">
+                  <div class="title hover">E-mail</div>
+                  <div class="contact-info"><a href="mailto:reachus@shadedfeather.com">reachus@shadedfeather.com</a></div>
+                  <div class="social-media">
+                      <div class="social-link-holder"><a target="_blank" href="https://vimeo.com/shadedfeather">Vimeo</a></div>
+                      <div class="social-link-holder"><a target="_blank" href="https://www.instagram.com/theshadedfeather/">Instagram</a></div>
+                      <div class="social-link-holder"><a target="_blank" href="https://www.linkedin.com/company/shaded-feather-productions/mycompany/">LinkedIn</a></div>
+                      <div class="social-link-holder"><a target="_blank" href="https://www.facebook.com/shadedfeather/">Facebook</a></div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </footer>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/anime.min.js"></script>
+  <script src="js/scrollreveal.min.js"></script>
+  <script src="js/main.js"></script>
   </body>
 </html>
