--- a/photography.html
+++ b/photography.html
@@ -116,7 +116,7 @@
         <div class="col">
             <div class="contact-info-holder">
                 <div class="title hover">Call us</div>
-                <div style="display: flex; gap: 20px;">
+                <div class="footer-call-div">
                     <div class="contact-info">9999251711, </div>
                     <div class="contact-info"">9999091710 </div>
                 </div>
