--- a/photography.html
+++ b/photography.html
@@ -101,7 +101,7 @@
 <div class="container-fluid other-content">
     <div class="row">
         <div class="col">
-            <div class="lg-text">have a project<br>for us?</div>
+            <div class="lg-text">got a brief<br>for us?</div>
             <div class="normal-text">
                 <p class="description">Get in touch with us and we will get the wheels rolling</p>
             </div>
