--- a/animations.html
+++ b/animations.html
@@ -61,7 +61,7 @@
     </video>
     </div>
   </div>
-  <div class="photos-side-headings" style="text-align: center; margin: 0; padding: 1rem 0;">animations and cg photography</div>
+  <div class="photos-side-headings">animations and cg photography</div>
   <div class="animations-div-2">
     <div class="">
         <img class="img-project" src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 4.12.47 PM.png" alt="">
@@ -95,7 +95,7 @@
 <div class="container-fluid other-content">
     <div class="row">
         <div class="col">
-            <div class="lg-text">have a project<br>for us?</div>
+            <div class="lg-text">got a brief<br>for us?</div>
             <div class="normal-text">
                 <p class="description">Get in touch with us and we will get the wheels rolling</p>
             </div>
@@ -110,7 +110,7 @@
         <div class="col">
             <div class="contact-info-holder">
                 <div class="title hover">Call us</div>
-                <div style="display: flex; gap: 20px;">
+                <div class="footer-call-div">
                     <div class="contact-info">9999251711, </div>
                     <div class="contact-info"">9999091710 </div>
                 </div>
