--- a/microcontent.html
+++ b/microcontent.html
@@ -65,7 +65,7 @@
 <div class="container-fluid other-content">
     <div class="row">
         <div class="col">
-            <div class="lg-text">have a project<br>for us?</div>
+            <div class="lg-text">got a brief<br>for us?</div>
             <div class="normal-text">
                 <p class="description">Get in touch with us and we will get the wheels rolling</p>
             </div>
@@ -80,7 +80,7 @@
         <div class="col">
             <div class="contact-info-holder">
                 <div class="title hover">Call us</div>
-                <div style="display: flex; gap: 20px;">
+                <div class="footer-call-div">
                     <div class="contact-info">9999251711, </div>
                     <div class="contact-info"">9999091710 </div>
                 </div>
