--- a/photography.html
+++ b/photography.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shaded Feather - Photography</title>
+    <link rel="shortcut icon" href="./Assets/images/Logo/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./Assets/images/Logo/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/fontawesome-all.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
