--- a/films.html
+++ b/films.html
@@ -37,7 +37,7 @@
 </div>
 <div class="complete-films">
   <div class="gray-color" style="background-color: #232931;">
-  <div class="photos-side-headings">consumer electronics</div>
+  <div class="photos-side-headings">films</div>
   <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/708812445?h=3d330afbf2" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <div class="place-start">
@@ -58,7 +58,7 @@
   </div>
 </div>
 <div class="white-color" style="background-color: white;">
-  <div class="photos-side-headings">automobiles</div>
+  <!-- <div class="photos-side-headings">automobiles</div> -->
   <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/617052578?h=c2cebcac4c" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <div class="place-start">
@@ -80,7 +80,7 @@
   </div>
 </div>
 <div class="gray-color" style="background-color: #232931;">
-  <div class="photos-side-headings">healthcare and wellness</div>
+  <!-- <div class="photos-side-headings">healthcare and wellness</div> -->
   <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/345890415?h=eebef02971" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <div class="place-start">
@@ -93,7 +93,7 @@
   </div>
   </div>
   <div class="gray-color" style="background-color: white;">
-  <div class="photos-side-headings">fashion beauty and lifestyle</div>
+  <!-- <div class="photos-side-headings">fashion beauty and lifestyle</div> -->
   <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/653699657?h=7b4a216069" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <div class="place-start">
@@ -106,7 +106,7 @@
   </div>
 </div>
 <div class="gray-color" style="background-color: #232931;">
-  <div class="photos-side-headings">social media</div>
+  <!-- <div class="photos-side-headings">social media</div> -->
   <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/632010719?h=1fb9b549a4" loading="lazy" class="iframe-vertical" frameborder="0" allowfullscreen></iframe>
     <div class="place-start">
@@ -123,7 +123,7 @@
   </div>
 </div>
   <div class="gray-color" style="background-color: white;">
-  <div class="photos-side-headings">alcohol</div>
+  <!-- <div class="photos-side-headings">alcohol</div> -->
   <div class="videos-grid-div">
     <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/731026854?h=a81e20d6f6" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe> -->
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/617105779?h=90abc715db" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
@@ -137,28 +137,28 @@
 </div>
 
   <!-- <iframe title="vimeo-player" src="https://player.vimeo.com/video/373565717?h=b46b309147" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe> -->
-  <!-- <div class="photos-side-headings">asees plus</div>
-  <div class="videos-grid-div">
+  <!-- <!-- <div class="photos-side-headings">asees plus</div> -->
+  <!-- <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/617078829?h=dd2d0c64a7" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/617082998?h=a455152e5a" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/617095739?h=aeb94bba15" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/617098860?h=06338c2c78" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/320906891?h=24305a8c2e" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div> -->
-  <!-- <div class="photos-side-headings">HDFC</div>
-  <div class="videos-grid-div">
+  </div>  -->
+  <!-- <!-- <div class="photos-side-headings">HDFC</div> -->
+  <!-- <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/354986118?h=620b619fb8" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div>
-  <div class="photos-side-headings">Adani</div>
-  <div class="videos-grid-div">
+  </div> -->
+  <!-- <div class="photos-side-headings">Adani</div> -->
+  <!-- <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/324597790?h=ea97640113" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div> -->
-  <!-- <div class="photos-side-headings">Lenskart</div>
-  <div class="videos-grid-div">
+  </div>  -->
+  <!-- <!-- <div class="photos-side-headings">Lenskart</div> -->
+  <!-- <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/382590816?h=e71dc327db" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div> -->
-  <!-- <div class="photos-side-headings">Other Major Brands</div>
-  <div class="videos-grid-div">
+  </div>  -->
+  <!-- <!-- <div class="photos-side-headings">Other Major Brands</div> -->
+  <!-- <div class="videos-grid-div">
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/685783275?h=c618f29b06" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/505822995?h=38f7fafbbd" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/451831761?h=8ee29d93c9" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
@@ -167,7 +167,7 @@
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/345891676?h=64e0b9701c" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/323431957?h=bb4e5cde87" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
     <iframe title="vimeo-player" src="https://player.vimeo.com/video/275802533?h=701cbaa91d" loading="lazy" class="iframe-films" frameborder="0" allowfullscreen></iframe>
-  </div> -->
+  </div>  -->
 </div>
 <div class="container-fluid other-content">
   <div class="row">
