--- a/about.html
+++ b/about.html
@@ -121,35 +121,43 @@
     </div>
   <ul class="ul-div-team">
     <li class="li-team team-1">
-      <span><img class="img-carousel" src="./Assets/images/AboutImages/a.png" alt=""></span>
+      <span><img class="img-carousel" src="./Assets/images/AboutImages/RUBAL SIR.png" alt=""></span>
       <div class="data-div-team">
-        <p class="name">Name</p>
-        <p class="role">Role</p>
-        <p class="description-1">Lorem ipsum dolor sit <br>amet consectetur adipisicing</p>
+        <p class="name">Rubal</p>
+        <p class="role">Director, Writer</p>
+        <p class="description-1">A man who knows it all.<br> Call it Quirky, He works it. <br>One who calls the shots and leads the shaded squad.</p>
       </div>
     </li>
     <li class="li-team team-2">
-      <span><img class="img-carousel" src="./Assets/images/AboutImages/b.png" alt=""></span>
+      <span><img class="img-carousel" src="./Assets/images/AboutImages/RAJESH SIR .png" alt=""></span>
       <div class="data-div-team">
-        <p class="name">Name</p>
-        <p class="role">Role</p>
-        <p class="description-2">Lorem ipsum dolor sit <br>amet consectetur adipisicing</p>
+        <p class="name">Rajesh Parihar</p>
+        <p class="role">Post Head</p>
+        <p class="description-2">They say films are made on editing tables<br> We say we got the one who gets the table rolling for us. </p>
       </div>
     </li>
     <li class="li-team team-3">
-      <span><img class="img-carousel" src="./Assets/images/AboutImages/c.jpeg" alt=""></span>
+      <span><img class="img-carousel" src="./Assets/images/AboutImages/Namit copy.png" alt=""></span>
       <div class="data-div-team">
-        <p class="name">Name</p>
-        <p class="role">Role</p>
-        <p class="description-3">Lorem ipsum dolor sit <br>amet consectetur adipisicing</p>
+        <p class="name">Namit Gogia</p>
+        <p class="role">Executive Producer</p>
+        <p class="description-3">Namit is our one call away guy. One who <br>makes things happen and eases out the process </p>
       </div>
     </li>
     <li class="li-team team-4">
-      <span><img class="img-carousel" src="./Assets/images/AboutImages/d.png" alt=""></span>
+      <span><img class="img-carousel" src="./Assets/images/AboutImages/shobhit .png" alt=""></span>
       <div class="data-div-team">
-        <p class="name">Name</p>
-        <p class="role">Role</p>
-        <p class="description-4">Lorem ipsum dolor sit <br>amet consectetur adipisicing</p>
+        <p class="name">Shobhit Malhotra </p>
+        <p class="role">Assistant Director</p>
+        <p class="description-4">He's the one you can make run like a flash,<br> always on the go. He remains calm but just in the mind. </p>
+      </div>
+    </li>
+    <li class="li-team team-5">
+      <span><img class="img-carousel" src="./Assets/images/AboutImages/ANJALI .png" alt=""></span>
+      <div class="data-div-team">
+        <p class="name">Anjali Prasad</p>
+        <p class="role">Creative Producer</p>
+        <p class="description-5">The one who is always on call,<br> whose Business is to keep her nose in everyone's Business,<br> she keeps everything in check.</p>
       </div>
     </li>
   </ul>
